<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RollDice">

    <TextView
        android:id="@+id/textView"
        android:layout_width="184dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:text="1 of 10 Rounds"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_weight="1"
        android:textStyle="bold"
        android:text="Selected Dices"
        app:layout_constraintBottom_toTopOf="@+id/SelectedDices"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/SelectedDices"
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.701">

    </LinearLayout>


    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="179dp"
        android:layout_height="51dp"
        android:layout_marginBottom="60dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/dices"
        android:layout_width="327dp"
        android:layout_height="206dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/throw_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- First row of dices -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/dice_view_1"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/white1"
                android:tag="1"
                android:clickable="true"
                android:contentDescription="Dice1"/>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="2"
                android:src="@drawable/white2"
                android:clickable="true"
                android:contentDescription="Dice2"/>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="3"
                android:src="@drawable/white3"
                android:clickable="true"
                android:contentDescription="Dice3"/>

        </LinearLayout>

        <!-- Second row of dices -->
        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/dice_view_2"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/white4"
                android:tag="4"
                android:clickable="true"
                android:contentDescription="Dice4"/>

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/white5"
                android:tag="5"
                android:clickable="true"
                android:contentDescription="Dice5"/>

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/white6"
                android:tag="6"
                android:clickable="true"
                android:contentDescription="Dice6"/>

        </LinearLayout>
    </LinearLayout>



    <Button
        android:id="@+id/throw_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="320dp"
        android:text="Throw"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Calculatebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="Calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toEndOf="@+id/categorySpinner" />

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>